# telegram-bot-aiogram-with-rust-and-cpp-example

./: .gitignore  Dockerfile  README.md  config.json  docker-compose.yml  init.sh  main.py  requirements.txt  setup.py  var.py
.github/: FUNDING.yml
cpp_impliment/: CMakeLists.txt  cpp_impliment.cpp  cpp_impliment.h
extend/: __init__.py  massage_handler.py
rust_lib/: Cargo.toml
rust_lib/src/: lib.rs
