[package]
name = "rust_lib"
version = "0.1.0"
authors = ["dark0ghost <dark0ghost@debian.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_lib"
crate-type = ["cdylib"]

[dependencies]


[dependencies.cpython]
version = "0.5.0"
features = ["extension-module"]

